--- a/index.html
+++ b/index.html
@@ -8,11 +8,92 @@
     <meta name=keywords content="jdbc, java, jdbi, mjdbc, sql, mapper, transaction, ORM">
     <meta name=author content="Mikhail Fursov and mjdbc contributors">
     <title>mjdbc - small and efficient JDBC wrapper</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="site.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>mjdbc - Small and efficient JDBC wrapper.</h1>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<div class="bs-docs-header" id="content" tabindex="-1">
+    <div class="container"><h1 class="logo-header">mjdbc</h1>
+        <p>An overview of <b>mjdbc</b>, how to download and use, basic templates and examples, and more.</p>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <!--Nav Bar -->
+        <nav class="col-xs-3 bs-docs-sidebar">
+            <ul id="sidebar" class="nav nav-stacked fixed">
+                <li>
+                    <a href="#GroupA">Group A</a>
+                    <ul class="nav nav-stacked">
+                        <li><a href="#GroupASub1">Sub-Group 1</a></li>
+                        <li><a href="#GroupASub2">Sub-Group 2</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#GroupB">Group B</a>
+                    <ul class="nav nav-stacked">
+                        <li><a href="#GroupBSub1">Sub-Group 1</a></li>
+                        <li><a href="#GroupBSub2">Sub-Group 2</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#GroupC">Group C</a>
+                    <ul class="nav nav-stacked">
+                        <li><a href="#GroupCSub1">Sub-Group 1</a></li>
+                        <li><a href="#GroupCSub2">Sub-Group 2</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <!--Main Content -->
+        <div class="col-xs-9">
+            <section id="GroupA" class="group">
+                <h3>Group A</h3>
+                <div id="GroupASub1" class="subgroup">
+                    <h4>Group A Sub 1</h4>
+                </div>
+                <div id="GroupASub2" class="subgroup">
+                    <h4>Group A Sub 2</h4>
+                </div>
+            </section>
+            <section id="GroupB" class="group">
+                <h3>Group B</h3>
+                <div id="GroupBSub1" class="subgroup">
+                    <h4>Group B Sub 1</h4>
+                </div>
+                <div id="GroupBSub2" class="subgroup">
+                    <h4>Group B Sub 2</h4>
+                </div>
+            </section>
+            <section id="GroupC" class="group">
+                <h3>Group C</h3>
+                <div id="GroupCSub1" class="subgroup">
+                    <h4>Group C Sub 1</h4>
+                </div>
+                <div id="GroupCSub2" class="subgroup">
+                    <h4>Group C Sub 2</h4>
+                </div>
+            </section>
+        </div>
+    </div>
+</div>
+<footer class="bs-docs-footer" role="contentinfo">
+    <div class="container">
+        <ul class="bs-docs-footer-links">
+            <li><a href="https://github.com/mjdbc/mjdbc">GitHub</a></li>
+        </ul>
+    </div>
+</footer>
+<script>
+    $('body').scrollspy({
+        target: '.bs-docs-sidebar',
+        offset: 40
+    });
+</script>
 </body>
 </html>
