--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div class="bs-docs-header" id="content" tabindex="-1">
     <div class="container">
         <h1 class="logo-header">mJDBC<sub>v1.0.0</sub></h1>
-        <div class="header-text">лаконичная, простая и удобная
-            библиотека для <a href="https://en.wikipedia.org/wiki/Java_Database_Connectivity" target="_blank">JDBC</a>
+        <div class="header-text">компактная, простая и удобная библиотека для
+            <a href="https://en.wikipedia.org/wiki/Java_Database_Connectivity" target="_blank">JDBC</a>
         </div>
         <div class="header-links-block">
             <a href="" class="btn btn-default btn-sm btn-header" target="_blank">Maven</a>
@@ -116,13 +116,6 @@
         </nav>
     </div>
 </div>
-<footer class="bs-docs-footer" role="contentinfo">
-    <div class="container">
-        <ul class="bs-docs-footer-links">
-            <li><a href="https://github.com/mjdbc/mjdbc">GitHub</a></li>
-        </ul>
-    </div>
-</footer>
 <script>
     $('body').scrollspy({
         target: '.bs-docs-sidebar',
