--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="site.css">
 
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+
 </head>
 <body>
 
@@ -30,14 +33,76 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container bs-docs-main">
     <div class="row">
         <!--Main Content -->
         <div class="col-xs-9">
             <section id="GroupInstall" class="group">
                 <h3>Установка</h3>
+                <div>
+                    Добавьте следующий код в проектный файл Maven:
+                    <pre class="prettyprint">
+&lt;dependency&gt;
+    &lt;groupId&gt;com.github.mjdbc&lt;/groupId&gt;
+    &lt;artifactId&gt;mjdbc&lt;/artifactId&gt;
+    &lt;version&gt;1.0.0&lt;/version&gt;
+&lt;/dependency&gt;</pre>
+                </div>
+            </section>
+            <section id="GroupExamples" class="group">
                 <div id="GroupInstallExample" class="subgroup">
-                    <h4>Пример использования</h4>
+                    <h3>Примеры использования</h3>
+                    Пример 1: Простые SQL запросы
+                    <pre class="prettyprint">
+// Шаг 1: Создаем mJDBC адаптер для java.sql.DataSource
+java.sql.DataSource ds = ...;
+Db db = new com.github.mjdbc.DbImpl(ds);
+
+// Шаг 2: Описываем SQL интерфейс
+public interface UserSql {
+    @Sql("INSERT INTO users(login) VALUES (:login)")
+    int insertUser(@BindBean User user);
+
+    @Sql("SELECT * FROM users WHERE login = :login")
+    User getUserByLogin(@Bind("login") String login)
+}
+
+// Шаг 3: Определяем правила считывания структур из ResultSet
+db.registerMapper(User.class, (r) -> {
+    User user = new User();
+    user.id = r.getInt("id");
+    user.login = r.getString("login");
+    ...
+    return user;
+};)
+
+// Шаг 4: Получаем реализацию SQL интерфейса
+UserSql userSql = db.attachSql(UserSql.class);
+
+// Шаг 5: Используем SQL интерфейс для исполнения запросов
+User user = userSql.getUserByLogin('login');</pre>
+
+                    Пример 2: Транзакции
+                    <pre class="prettyprint">
+// Шаг 1: Создаем интерфейс с транзакционными методами
+public interface UserDbi {
+    void registerUser(User user);
+}
+
+// Шаг 2: Имплементируем интерфейс
+public class UserDbiImpl implements UserDbi {
+    public void registerUser(User user) {
+        User copy = userSql.getUserByLogin(user.login);
+        assertNull(copy, "Пользователь уже существует: " + user.login);
+        user.id = userSql.insertUser(user);
+    }
+}
+
+// Шаг 3: Получаем транзакционный прокси-адаптер для интерфейса
+UserDbi userDbi = db.attachDbi(UserDbi.class, new UserDbiImpl());
+
+// Шаг 4: Используем адаптер для вызова методов имплементации
+userDbi.registerUser(new User("root"));</pre>
                 </div>
             </section>
             <section id="GroupOverview" class="group">
@@ -77,41 +142,25 @@
         <!--Nav Bar -->
         <nav class="col-xs-3 bs-docs-sidebar">
             <ul id="sidebar" class="nav nav-stacked fixed">
-                <li>
-                    <a href="#GroupInstall">Установка</a>
-                    <ul class="nav nav-stacked">
-                        <li><a href="#GroupInstallExample">Пример использования</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#GroupOverview">Обзор функционала</a>
+                <li><a href="#GroupInstall">Установка</a></li>
+                <li><a href="#GroupExamples">Примеры использования</a></li>
+                <li><a href="#GroupOverview">Обзор функционала</a>
                     <ul class="nav nav-stacked">
                         <li><a href="#GroupOverviewSub1">Sub-Group 1</a></li>
                         <li><a href="#GroupOverviewSub2">Sub-Group 2</a></li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#GroupTransactions">Транзакции</a>
-                </li>
-                <li>
-                    <a href="#GroupMapping">Отображение типов</a>
-                </li>
-                <li>
-                    <a href="#GroupSql">SQL запросы</a>
+                <li><a href="#GroupTransactions">Транзакции</a></li>
+                <li><a href="#GroupMapping">Отображение типов</a></li>
+                <li><a href="#GroupSql">SQL запросы</a>
                     <ul class="nav nav-stacked">
                         <li><a href="#GroupSqlInterface">SQL интерфейсы</a></li>
                         <li><a href="#GroupSqlBatch">Batch-операции</a></li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#GroupProfiling">Профилировка</a>
-                </li>
-                <li>
-                    <a href="#GroupLowLevelApi">Низкоуровневый интерфейс</a>
-                </li>
-                <li>
-                    <a href="#GroupRecommendations">Рекомендации</a>
-                </li>
+                <li><a href="#GroupProfiling">Профилировка</a></li>
+                <li><a href="#GroupLowLevelApi">Низкоуровневый интерфейс</a></li>
+                <li><a href="#GroupRecommendations">Рекомендации</a></li>
             </ul>
         </nav>
     </div>
