--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     <li><i>Надеждность</i> - SQL запросы проверяются на момент старта приложения.</li>
                     <li><i>Гибкость</i> - доступ к низкоуровневому функционалу JDBC.</li>
                     <li><i>Производительность</i> - нет дополнительных вычислительных расходов по сравнению с JDBC.</li>
-                    <li><i>Транзакционность</i> - методы могут выполнять роль транзакций. Открытие соединения при исполнении первого запроса.</li>
+                    <li><i>Транзакционность</i> - методы могут выполнять роль транзакций.</li>
+                    <li><i>Скорость</i> - SQL соедиенение открывается в момент исполнения первого реального запроса.</li>
                     <li><i>Расширяемость</i> - регистрация новых типов данных, переопределение существующих.</li>
                     <li><i>Профилировка</i> - доступ метрикам исполнения запросов и транзакций.</li>
                     <li><i>Открытость</i> - открытый исходный код: возможность изменять и исправлять.</li>
@@ -71,7 +72,7 @@
                     <pre class="prettyprint">
 // Шаг 1: Создаем mJDBC адаптер для java.sql.DataSource
 java.sql.DataSource ds = ...;
-Db db = new com.github.mjdbc.DbImpl(ds);
+Db db = Db.newInstance(ds);
 
 // Шаг 2: Описываем SQL интерфейс
 public interface UserSql {
@@ -120,29 +121,67 @@ UserDbi userDbi = db.attachDbi(UserDbi.class, new UserDbiImpl());
 userDbi.registerUser(new User("root"));</pre>
                 </div>
             </section>
-            <section id="GroupOverview" class="group">
-                <h3>Обзор функционала</h3>
-                <div id="GroupOverviewSub1" class="subgroup">
-                    <h4>Group B Sub 1</h4>
-                </div>
-                <div id="GroupOverviewSub2" class="subgroup">
-                    <h4>Group B Sub 2</h4>
-                </div>
+            <section id="GroupAdapter" class="group">
+                <h3>Обзор mJDBC адаптера</h3>
+                <p>
+                    Для того, чтобы начать использовать mJDBC необходимо создать адаптер типа <i>com.github.mjdbc.Db</i> поверх экземпляра <i>javax.sql.DataSource</i>.
+                    Для этого нужно использовать статический метод-фабрику:</p>
+                <pre class="prettyprint">
+static Db newInstance(DataSource ds)</pre>
+                <p><a href="#GroupTransactions"> Транзакционные интерфейсы</a> позволяют выполнить серию SQL-запросов как единую транзакцию давая гарантию, что либо все SQL операции внутри
+                    транзакции будут завершены успешено, либо ни одна из них не будет иметь эффект при завершении транзакции.
+                    Для регистрации транзакционных интерфейсов используйте следующий метод:
+                </p>
+                <pre class="prettyprint">
+&lt;T&gt; T attachDbi(T impl, @NotNull Class&lt;T&gt; dbiInterface)</pre>
+                <p><a href="#GroupSql">SQL интерфейсы</a> - выразительный способ описывать SQL запросы проверяемые на корректность на момент регистрации интерфейса.
+                    Метод регистрации интерфейса возвращает Proxy-класс с реализацией SQL методов описанных в качестве @Sql аннотаций.
+                <pre class="prettyprint">
+&lt;T&gt; T attachSql(Class&lt;T&gt; sqlInterface);</pre>
+                <p><a href="#GroupBinders">Типы параметров</a> для SQL интерфейсов могут быть расширены при помощи регистрации реализаций интерфейса <i>DbBinder</i>,
+                    который обеспечивает отображение значения параметра в JDBC параметр для <i>java.sql.PreparedStatement</i></p>
+                <pre class="prettyprint">
+&lt;T&gt; void registerBinder(Class&lt;? extends T&gt; binderClass, DbBinder&lt;T&gt; binder)</pre>
+                За <a href="#GroupMappers">возвращаемые значения</a> SQL запросов отвечают зарегистрированные экземпляры класса <i>DbMapper</i>.
+                mJDBC поддерживает примитивные Java типы, JDBC типы и списки. Поддержка новых типов может быть расширена за счет использования следующего метода:
+                <pre class="prettyprint">
+&lt;T&gt; void registerMapper(Class&lt;T&gt; mapperClass, DbMapper&lt;T&gt; mapper);</pre>
+                <p>Помимо создания транзакционных и SQL интерфейсов mJDBC позволяет создавать <a href="#GroupLowLevelApi">прямые запросы</a> к базе.
+                    При этом вызванный метод будет обернут в транзакцию так, если бы использовался транзацкионный интерфейс.</p>
+                <p>Внутри у метода будет доступ как к управляемому JDBC соединению (<i>DbConnection</i>), так и к <i>DbPreparedStatement</i> классу который поддерживает
+                    работу с <i>DbBinder</i>/<i>DbMapper</i> и именованными параметрами. Помимо этого будет доступ к реальным JDBC объектам.</p>
+                <p>Все вызовы mJDBC аннотированы с <i>@Nullable</i>/<i>@NotNull</i> аннотациями для жесткого контроля работы с нулевыми значениями.
+                    Более того, операции которые могут и не могут возвращать нулевые значения разделены. </p>
+                <pre class="prettyprint">
+@Nullable
+&lt;T&gt; T execute(@NotNull DbOp&lt;T&gt; op);
+
+@NotNull
+&lt;T&gt; T executeNN(@NotNull DbOpNN&lt;T&gt; op);
+
+void executeV(@NotNull  DbOpV op);
+                </pre>
+                <p>
+                    Доступ к простейшей <a href="#GroupProfiling">профилировочной информации</a> о числе вызовов и суммарном времени исполнения транзационных методов и SQL-запросов
+                    можно получить используя метод <i>getTimers</i>:
+                </p>
+                <pre class="prettyprint">
+Map&lt;Method, DbTimer&gt; getTimers();</pre>
             </section>
             <section id="GroupTransactions" class="group">
                 <h3>Транзакции</h3>
             </section>
-            <section id="GroupMapping" class="group">
-                <h3>Отображение типов</h3>
-            </section>
             <section id="GroupSql" class="group">
-                <h3>SQL запросы</h3>
-                <div id="GroupSqlInterface" class="subgroup">
-                    <h4>SQL интерфейсы</h4>
-                </div>
-                <div id="GroupSqlBatch" class="subgroup">
-                    <h4>Batch-операции</h4>
-                </div>
+                <h3>SQL интерфейс</h3>
+            </section>
+            <section id="GroupBinders" class="group">
+                <h3>SQL параметры</h3>
+            </section>
+            <section id="GroupMappers" class="group">
+                <h3>SQL результаты</h3>
+            </section>
+            <section id="GroupBatch" class="group">
+                <h3>Batch операции</h3>
             </section>
             <section id="GroupProfiling" class="group">
                 <h3>Профилировка</h3>
@@ -160,20 +199,11 @@ userDbi.registerUser(new User("root"));</pre>
                 <li><a href="#GroupAbout">О библиотеке</a></li>
                 <li><a href="#GroupInstall">Установка</a></li>
                 <li><a href="#GroupExamples">Примеры использования</a></li>
-                <li><a href="#GroupOverview">Обзор функционала</a>
-                    <ul class="nav nav-stacked">
-                        <li><a href="#GroupOverviewSub1">Sub-Group 1</a></li>
-                        <li><a href="#GroupOverviewSub2">Sub-Group 2</a></li>
-                    </ul>
-                </li>
+                <li><a href="#GroupAdapter">Обзор mJDBC адаптера</a></li>
                 <li><a href="#GroupTransactions">Транзакции</a></li>
-                <li><a href="#GroupMapping">Отображение типов</a></li>
-                <li><a href="#GroupSql">SQL запросы</a>
-                    <ul class="nav nav-stacked">
-                        <li><a href="#GroupSqlInterface">SQL интерфейсы</a></li>
-                        <li><a href="#GroupSqlBatch">Batch-операции</a></li>
-                    </ul>
-                </li>
+                <li><a href="#GroupBinders">SQL параметры</a></li>
+                <li><a href="#GroupMappers">SQL результаты</a></li>
+                <li><a href="#GroupBatch">Batch операции</a></li>
                 <li><a href="#GroupProfiling">Профилировка</a></li>
                 <li><a href="#GroupLowLevelApi">Низкоуровневый интерфейс</a></li>
                 <li><a href="#GroupRecommendations">Рекомендации</a></li>
