--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Map&lt;Method, DbTimer&gt; getTimers()</pre>
                     Соответствие SQL и Java параметров строится по их именам. Для этого для Java параметров используется аннотация <i>@Bind</i>
                     в которой указывается имя соответствующего SQL параметра. Также, для объектных типов возможно использование аннотации @BindBean:
                     в этом случае в качестве параметров SQL будут подставлены имена и значения полей Java объекта.
-                    Поля объекта должны быть публичными, либо иметь публичные get-методы.
+                    Поля объекта должны быть публичными, либо иметь публичные <i>get</i>-методы.
                 </p>
                 <p>
                     Исполнение каждого SQL запроса приведет к созданию и исполнению <i>java.sql.PreparedStatement</i>. При этом, для параметров имеющих базовые
@@ -284,6 +284,41 @@ Map&lt;Method, DbTimer&gt; getTimers()</pre>
             </section>
             <section id="GroupBinders" class="group">
                 <h3>SQL параметры</h3>
+                <p>
+                    Для работы с параметрами <a href="#GroupSql">SQL интерфейса</a> используются интерфейс <i>DbBinder</i> и аннотации <i>@Bind</i> и <i>@BindBean</i>.
+                    Интерфейс DbBinder описывает как параметр указанного Java типа должен быть сериализован в качестве параметра <i>java.sql.PreparedStatements</i>:
+                </p>
+                <pre class="prettyprint">
+public interface DbBinder&lt;T&gt; {
+    void bind(PreparedStatement statement, int idx, T value)
+}</pre>
+                <p>При исполнении SQL-запроса mJDBC автоматически подбирает подходящую реализацию <i>DbBinder</i> из набора всех зарегистрированных.
+                    При этом, приоритет поиска <i>DbBinder</i> следующий:</p>
+                <ul class="spec-list">
+                    <li>Точное совпадение с типом класса параметра.</li>
+                    <li>Точное совпадение с типом родительского класса параметра.</li>
+                    <li>Совпадение с одним из имплементированных интерфейсов.</li>
+                </ul>
+                <p>
+                    При наличии более одного подходящего интерфейса производится исключение: <i>java.lang.IllegalArgumentException.</i>
+                    Процесс подбора <i>DbBinder</i> происходит на момент регистрации SQL интерфейса в mJDBC.
+                </p>
+                <p>Для регистрации новых реализаций <i>DbBinder</i> используется метод</p>
+                <pre class="prettyprint">
+&lt;T&gt; void registerBinder(Class&lt;? extends T&gt; binderClass, DbBinder&lt;T&gt; binder)</pre>
+                <p>
+                    Аннотация <i>@Bind</i> используется для указания точного имени параметра <i>java.sql.PreparedStatement</i>.
+                </p>
+                <p>
+                    Аннотация <i>@BindBean</i> говорит о том, что имена параметров должны совпадать с именами публичных полей или <i>get</i>-методов объекта.
+                    В текущей версии mJDBC параметр описанный при помощи <i>@BindBean</i> должен быть единственным параметром интерфейса.
+                </p>
+                <p>
+                    В случае, если SQL запрос содержит больше именованных параметров, чем доступно при из данных <i>@Bind</i> и <i>@BindBean</i> аннотаций,
+                    производится исключение. Лишние параметры со стороны Java игнорируются. Имена параметров могут содержать только символы Java идентификаторов.
+                </p>
+                <p>Проверка на полноту и корректность SQL параметров происходит в момент регистрации SQL-интерфейса.</p>
+
             </section>
             <section id="GroupMappers" class="group">
                 <h3>SQL результаты</h3>
