DbMappers chapter update

--- a/index.html
+++ b/index.html
@@ -346,15 +346,19 @@ db.registerMapper(User.class, mapper);
 </pre>
                 <p>
                     Существует несколько техник, которые позволяют mJDBC автоматически находить необходимые реализации <i>DbMapper</i> для возвращаемых методами SQL интерфесов типов,
-                    делая их ручную регистрацию опциональной. Для этого, для возвращаемого типа <i>T</i> должно быть выполнено одно из следующих условий:
+                    делая их ручную регистрацию опциональной. Для этого, для возвращаемого типа <i>T</i> должно быть выполнено следующее условие:
                 </p>
                 <ul class="spec-list">
-                    <li>Присутствует публичная статическая переменная с именем MAPPER и типом <i>DbMapper&lt;T&gt;</i></li>
-                    <li>Присутствует публичная статическая переменная с аннотацией <i>@Mapper</i> и типом <i>DbMapper&lt;T&gt;</i></li>
-                    <li>Присутствует публичная статическая функция с аннотацией <i>@Mapper</i>, принимаемым параметром <i>java.sql.ResultSet</i> и возвращаемым значением <i>T</i></li>
+                    <li>Присутствует публичное статическое финальное поле с аннотацией <i>@Mapper</i> и типом <i>DbMapper&lt;T&gt;</i></li>
                 </ul>
                 <p>
-                    Автоматический поиск нужного экземпляра происходит в указанном выше порядке, при условии что для типа <i>T</i> нет экземпляра <i>DbMapper&lt;T&gt;</i> зарегистрированного в ручную.
+                    Автоматический поиск нужного экземпляра происходит при условии, что для типа <i>T</i> нет экземпляра <i>DbMapper&lt;T&gt;</i> зарегистрированного вручную.
+                </p>
+                <p>
+                    Поиск происходит на момент регистрации SQL интерфейса.
+                    В случае, если в результате поиска найдено 2 или более кандидата на роль <i>DbMapper</i>, выбрасывается исключение и регистрации SQL-интерфейса не происходит.</p>
+                <p>
+                    Повторные прямые вызовы метода <i>registerMapper</i> допускаются и приводят к регистрации нового обработчика <i>DbMapper</i> для указанного типа.
                 </p>
 
             </section>
